[Offline pages] Detect pure http error codes and record http codes in new combined UMA

Bug: 725682
Change-Id: I9f016b5724a8ea6a98b574bd41d490ceb5aeb197