chrome/browser/offline_pages/background_loader_offliner.cc
@@ -69,8 +69,8 @@ std::string AddHistogramSuffix(const ClientId& client_id,
 void RecordErrorCauseUMA(const ClientId& client_id, net::Error error_code) {
   UMA_HISTOGRAM_SPARSE_SLOWLY(
       AddHistogramSuffix(client_id,
-                         "OfflinePages.Background.BackgroundLoadingFailedCode"),
-      std::abs(error_code));
+                         "OfflinePages.Background.LoadingErrorStatusCode"),
+      error_code);
 }
 
 void HandleLoadTerminationCancel(
@@ -254,6 +254,10 @@ void BackgroundLoaderOffliner::DocumentAvailableInMainFrame() {
   AddLoadingSignal("DocumentAvailableInMainFrame");
 }
 
+void BackgroundLoaderOffliner::DidFirstVisuallyNonEmptyPaint() {
+  is_low_bar_met_ = true;
+}
+
 void BackgroundLoaderOffliner::DocumentOnLoadCompletedInMainFrame() {
   if (!pending_request_.get()) {
     DVLOG(1) << "DidStopLoading called even though no pending request.";
@@ -309,6 +313,12 @@ void BackgroundLoaderOffliner::DidFinishNavigation(
         break;
       default:
         page_load_state_ = RETRIABLE;
+    }
+  } else {
+    int status_code = navigation_handle->GetResponseHeaders()->response_code();
+    if (status_code == 301 || (status_code >= 400 && status_code != 418)) {
+      RecordErrorCauseUMA(pending_request_->client_id(), status_code);
+      page_load_state_ = RETRIABLE;
     }
   }
 }
